// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Footer should render correctly 1`] = `
.c4 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c4 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c1 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c2:first-of-type:after {
  content: ' | ';
}

.c2:not(:first-of-type) {
  margin-left: 5px;
}

.c2:not(:last-of-type):after {
  margin-left: 3px;
}

.c2:last-of-type {
  display: none;
}

.c3 {
  font-weight: 300;
  margin-right: 3px;
}

.c5 {
  font-weight: 300;
}

@media only screen and (min-width:330px) {
  .c4 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c4 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c4:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:1200px) {
  .c2:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c2:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c2:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c2:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c2:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c2 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c3 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c5 {
    font-size: 0.85rem;
  }
}

<footer
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
      >
        ©2023
      </p>
      <p
        class="c3"
      >
        BY
      </p>
      <a
        class="c4"
        href="https://jdmiguel.com"
      >
        JDMIGUEL
      </a>
    </div>
    <div
      class="c2"
    >
      <a
        class="c4"
      >
        <i
          class="material-icons"
        >
          bookmarks
        </i>
        FAVORITES
      </a>
    </div>
    <div
      class="c2"
    >
      <p
        class="c5"
      />
      <a
        class="c4"
        href="https://foodublin-design-system.netlify.app"
      >
        DESIGN SYSTEM
      </a>
    </div>
  </div>
</footer>
`;

exports[`Component: Footer should render with veil 1`] = `
.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c0 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c1 {
  background-color: #F3F3F3;
  height: 192px;
  opacity: 0.6;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

.c2 {
  background-color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c3:first-of-type:after {
  content: ' | ';
}

.c3:not(:first-of-type) {
  margin-left: 5px;
}

.c3:not(:last-of-type):after {
  margin-left: 3px;
}

.c3:last-of-type {
  display: none;
}

.c4 {
  font-weight: 300;
  margin-right: 3px;
}

.c6 {
  font-weight: 300;
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {
  .c1 {
    height: 172px;
  }
}

@media only screen and (min-width:1200px) {
  .c3:first-of-type:after {
    content: '';
  }
}

@media only screen and (min-width:375px) {
  .c3:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c3:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:1200px) {
  .c3:not(:last-of-type):after {
    content: ' | ';
  }
}

@media only screen and (min-width:1200px) {
  .c3:last-of-type {
    display: block;
  }
}

@media only screen and (max-width:330px) {
  .c3 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c4 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c6 {
    font-size: 0.85rem;
  }
}

<footer
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <p
        class="c4"
      >
        ©2023
      </p>
      <p
        class="c4"
      >
        BY
      </p>
      <a
        class="c5"
        href="https://jdmiguel.com"
      >
        JDMIGUEL
      </a>
    </div>
    <div
      class="c3"
    >
      <a
        class="c5"
      >
        <i
          class="material-icons"
        >
          bookmarks
        </i>
        FAVORITES
      </a>
    </div>
    <div
      class="c3"
    >
      <p
        class="c6"
      />
      <a
        class="c5"
        href="https://foodublin-design-system.netlify.app"
      >
        DESIGN SYSTEM
      </a>
    </div>
  </div>
</footer>
`;
